<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/head_bagcolor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bag_color"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/head_bagCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bagcount"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/head_bagSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/total_weight"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="8"
        android:orientation="vertical">

        <ListView
            android:id="@+id/batchView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:onClick="fabClicked"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="#FFFFFF"
            app:backgroundTint="#E91E63"/>-->

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:theme="@style/buttonTheme">

        <Button
            android:id="@+id/btn_delbatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_batch"
            android:theme="@style/buttonTheme" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:theme="@style/buttonTheme" />
    </LinearLayout>
</LinearLayout>